# Ghost

./: .cursorrules  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  Makefile  README.md  ghost.proto  pulse_output.txt  pulse_output2.txt  pulse_output3.txt  push_error.txt  remote_branches.txt  remove_dup_test.py  slop_test.js  verify_ghost.ps1
.context/: ARCHITECTURE.md  LEARNINGS.md  PROJECT.md
.github/workflows/: jules.yml
apps/landing/: package.json
apps/landing/src/: App.tsx  main.tsx
apps/www/: package-lock.json  package.json
apps/www/src/: App.tsx  index.css
body_rust/: Cargo.toml  build.rs  build_error.txt  build_output.txt
body_rust/src/: accessibility.rs  effector.rs  librarian.rs  main.rs
brain_python/: main.py  requirements.txt
brain_python/brain/: __init__.py  cortex_ref.py  ghost_pb2.py  ghost_pb2_grpc.py  nerve.py  path_utils.py  planner.py  test_planner.py
brain_python/ears/: hearing.py  recorder.py
brain_python/gui/: __init__.py  animations.py  tray.py
conscience_go/: go.mod  go.sum  main.go  main_test.go  tools.go
conscience_go/dashboard/: app.js  index.html  style.css
conscience_go/dashboard/landing/: build_log.txt  build_log_v4.txt  package-lock.json  package.json
conscience_go/data/: kernel.db  kernel.db-shm  kernel.db-wal
conscience_go/internal/adapter/: action_repository.go  commands.go  goal_repository.go  intent_history_repository.go  sentinel.go  sqlite.go  state_repository.go
conscience_go/internal/conscience/: validator.go  validator_test.go
scripts/: build-static.ps1  make_transparent.py
(+40 files in other folders)
