[package]
name = "engram-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
notify = "6.1"
walkdir = "2.5"
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
] }

[[bin]]
name = "engram-sentinel"
path = "src/main.rs"
