[package]
name = "ghost_sentinel"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tonic = "0.10"
prost = "0.12"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# windows crate remains for Accessibility API
windows = { version = "0.52", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
] }
anyhow = "1.0"
enigo = "0.2"

[build-dependencies]
tonic-build = "0.10"
